# TABULA-R2

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: README.md  analysis.yaml  data_processing.yaml  qna.yaml
configs/comparison_analysis/: codellama_baseline_analysis.yaml  gemma_baseline_analysis.yaml  llama32_baseline_analysis.yaml  llama3_cot_analysis.yaml  llama3_fewshot0_analysis.yaml  llama3_fewshot1_analysis.yaml  llama3_fulltable_analysis.yaml  llama3_header1_analysis.yaml  llama_baseline_analysis.yaml  qwen_baseline_analysis.yaml
configs/comparison_experiments/: codellama_baseline.yaml  gemma_baseline.yaml  llama32_baseline.yaml  llama3_cot.yaml  llama3_fewshot0.yaml  llama3_fewshot1.yaml  llama3_fulltable.yaml  llama3_header1.yaml  qwen_baseline.yaml
data/questions/: README.md
data/questions/documents/: metadata_definitions.md  notes.md  sop_question_generation.md
data/tables/: README.md  table_index.json
logs/: README.md
scripts/: README.md  data_processing.py  qna_runner.py
scripts/data_analysis/: analyze_results.py  question_statistics.py  table_statistics.py
src/data_processing/: README.md  __init__.py  index_builder.py  llm_domain_classifier.py  metadata_extractor.py  owid_processor.py  table_cleaner.py  table_grouper.py
src/evaluation/: README.md  __init__.py  dsl_executor.py  guidance.py  llm_validator.py  log_writer.py  observation_space.py  plan_parser.py  question_selector.py
src/prompts/: README.md  __init__.py  prompt_manager.py
src/utils/: README.md  __init__.py  config.py  io_utils.py  llm_client.py  logging_utils.py
(+379 files in other folders)
